--- a/css/style.css
+++ b/css/style.css
@@ -89,11 +89,13 @@ h6 {
   margin-bottom: 10px; }
 
 #leftSide {
+  display: table-cell;
   position: fixed;
   top: 0;
   left: 0;
   width: 50%;
   height: 100vh;
+  padding: 20px 0;
   overflow: hidden; }
 
 #rightSide {
@@ -116,16 +118,18 @@ h6 {
 /* Home ................... */
 /* ------------------------------------- */
 #home, #homeCenter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   z-index: 1; }
 
 .h-content {
-  position: relative;
-  z-index: 0;
-  top: 32vh;
   width: 100%;
   padding: 10px 10%;
+  text-align: center;
   color: #fff; }
 
 .h-content-fullwidth {
@@ -136,27 +140,12 @@ h6 {
   padding: 10px 10%;
   color: #fff; }
 
-#homeCenter .h-content {
-  text-align: center; }
-
 .main-logo {
-  position: absolute;
-  top: 8%;
-  max-width: 150px;
-  left: 10%; }
-
-#homeCenter .main-logo {
-  left: calc(50% - 47.5px); }
+  max-width: 150px; }
 
 .social_icons, #homeCenter .social_icons {
-  position: absolute;
-  left: 0;
-  bottom: 50px;
   width: 100%;
-  font-size: 1em;
-  padding-left: 10%;
-  z-index: 2;
-  color: #fff; }
+  text-align: center; }
   .social_icons li, #homeCenter .social_icons li {
     display: inline; }
     .social_icons li i, #homeCenter .social_icons li i {
@@ -170,16 +159,6 @@ h6 {
       .social_icons li i:hover, #homeCenter .social_icons li i:hover {
         color: #1a0099;
         transition: .1s; }
-
-#homeCenter .social_icons {
-  text-align: center;
-  left: 50%;
-  padding: 0;
-  -webkit-transform: translate(-50%);
-  -ms-transform: translate(-50%);
-  -moz-transform: translate(-50%);
-  -o-transform: translate(-50%);
-  transform: translate(-50%); }
 
 /* ------------------------------------- */
 /* Quote  ................... */
@@ -1416,6 +1395,7 @@ img {
 }
 .menu_active {
   transform: translateX(0%);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 .menu-list {
   padding: 60px 0;
