--- a/css/style.css
+++ b/css/style.css
@@ -1361,21 +1361,38 @@ img {
     left: 0;
     width: 100%;
     height: 100%; }
-  }
   .item_info {
     left: 0;
-    width: 100%;
+    width: 100%; }
   }
 
 @media only screen and (max-width: 320px) {
   .h-content {
     top: 22vh;
   }
+  .service .feature .view, .pricing .price .view {
+    opacity: 1;
+  }
+  .service .feature:hover {
+    -webkit-transform: none;
+    -ms-transform: none;
+    -moz-transform: none;
+    -o-transform: none;
+    transform: none;
+    background: #f5f5f5;
+  }
+  .price:hover {
+    -webkit-transform: none;
+    -ms-transform: none;
+    -moz-transform: none;
+    -o-transform: none;
+    transform: none;
+  }
   .menu-btn {
     transition: 0.3s;
   }
   .menu_active .menu-btn {
-    right: 5px;
+    right: 0;
   }
 }
 
@@ -1411,13 +1428,13 @@ img {
 }
 .menu-btn {
   position: absolute;
-  right: -55px;
-  top: 5px;
+  right: -50px;
+  top: 0;
   width: 50px;
   height: 50px;
-  background-color: #fff;
+  background-color: #121619;
   padding: 0;
-  border: 1px solid rgba(51, 51, 51, 0.5);
+  border: 0;
 }
 .menu-btn span,
 .menu-btn span::before,
@@ -1429,7 +1446,7 @@ img {
   margin-left: -10px;
   width: 20px;
   height: 2px;
-  background-color: #333;
+  background-color: #fff;
 }
 .menu-btn span::before,
 .menu-btn span::after {
