--- a/css/style.css
+++ b/css/style.css
@@ -553,7 +553,7 @@ h6 {
   -moz-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
-  border: 1px solid #121619;
+  border: 1px solid #0079ba;
   border-radius: 3px;
 }
 .dark .service .feature {
@@ -580,7 +580,7 @@ h6 {
 .sections {
   width: 100%;
   padding: 10% 8%;
-  background: #121619;
+  background: #0079ba;
   color: #fff;
 }
 .sections .service .row {
